<resources>
    <string name="app_name">悦妹纸</string>

    <string name="catalog">分类</string>
    <string name="recommend">推荐</string>

    <string name="imgs_size">%1$s张</string>
    <string name="imgs_visitor_count">浏览%1$s次</string>

    <string name="loadmore_error">加载更多妹纸失败...</string>
    <string name="category_error">妹纸分类获取失败...</string>
    <string name="img_error">妹纸加载失败...</string>
    <string name="gallery_error">妹纸加载失败...</string>

    <string name="picture_index">第%1$s张</string>

    <string name="loading_percent">Loading...%1$s%%</string>

    <string name="mobile_warning">当前网络状态为数据流量，请注意流量使用！</string>
    <string name="mobile_safe">当前为离线缓存模式，放心的使用吧！</string>

    <string name="no_net">亲，没有网络...不过还有缓存的妹纸噢！</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="menu_only_wifi">仅Wifi联网</string>
    <string name="menu_about">关于</string>
    <string name="menu_setting">设置</string>
    <string name="menu_skin">皮肤</string>
    <string name="menu_download">我的下载</string>
    <string name="menu_favorite">我的收藏</string>

    <string name="theme_dialog_title">主题色</string>
    <string name="done">完成</string>
    <string name="cancel">取消</string>
    <string name="menu_offline">离线缓存模式</string>
    <string name="about_title">关于</string>
    <string name="about_content">
        这是一款欣赏妹纸图片的App。
        \n
        \n &#160;❤联网控制、离线缓存模式和图片下载功能，保证您的流量安全。
        \n &#160;❤拥有清新的界面和多款皮肤。
        \n &#160;❤第三方分享功能，直接将妹纸图片分享给自己的朋友。
        \n &#160;❤强大的Bug反馈功能，App出现bug后作者会马上收到崩溃信息，并会尽力在下一版本中得到解决。
        \n &#160;❤大量优质的图片资源，并保持每日更新。
        \n
        \n★作者：Dup
        \n★邮箱：<a href="AimSunshine@163.com">AimSunshine@163.com</a>
        \n★App源代码和技术点介绍：<a href="https://github.com/aalallalalal/Beauty">https://github.com/aalallalalal/Beauty</a>
        \n
        \n&#160;&#160;如果大家觉得不错的话，欢迎大家去上方Github网址点个star，或提出你宝贵的意见或代码，一起来完善她吧！
        \n
        \n&#160;&#160;最后，祝大家使用愉快！
        \n
        \n&#160;&#160;附：图片来源：<a href="http://www.tngou.net">天狗阅图(http://www.tngou.net)</a>
    </string>
    <string name="thirdpart_plantform">第三方平台登陆/注册:</string>


    <string name="register_email">邮箱：</string>
    <string name="register_account">账号：</string>
    <string name="register_password">密码：</string>
    <string name="register_confirm_password">确认密码：</string>
    <string name="form_finish">完成</string>
    <string name="login_account_email">邮箱：</string>
    <string name="less_six">最短6位</string>
    <string name="max_ten">最长10位</string>

    <string name="email_error">邮箱格式不正确</string>
    <string name="account_error">账号不正确</string>
    <string name="pwd_error">密码长度过短</string>
    <string name="pwdconfirm_error">两次输入的密码不匹配</string>
    <string name="register_success">注册成功！</string>
    <string name="register_failed">注册失败...</string>
    <string name="login_success">登陆成功！</string>
    <string name="login_failed">登陆失败...</string>
    <string name="login_out">退出登陆</string>
    <string name="download_success">%1$s下载成功</string>
    <string name="download_failed">%1$s下载失败,请确认App联网模式及手机网络。</string>
    <string name="start_download">开始下载妹纸...</string>
    <string name="share_failed">分享妹纸失败...</string>
    <string name="share_canceled">分享妹纸取消...</string>
    <string name="clear_cache_img">清空妹纸缓存</string>
    <string name="clear_cache_net">清空离线网络缓存</string>
    <string name="image_cache_cleared">妹纸缓存成功清空！</string>
    <string name="net_cache_cleared">网络缓存数据成功清空！</string>
    <string name="clear_cache_img_warning">清空妹纸缓存会释放一定的手机储存空间，但所有妹纸会重新从网络加载。</string>
    <string name="clear_cache_net_warning">清除网络请求缓存后会导致离线模式失效。</string>
    <string name="download_info">妹纸存放地址</string>
    <string name="waiting_load_share">正在准备妹纸，请稍等...</string>
    <string name="crash_toast">妹纸生病了...症状信息作者已收集，妹纸会尽快痊愈!</string>
    <string name="version">版本号:%1$s</string>
    <string name="image_loading">妹纸正在赶来的路上...</string>
    <string name="image_loading_error">妹纸被堵在路上了...</string>
</resources>
