<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:tag="skin:main_bg:background"
    tools:context="com.dup.beauty.ui.activity.SettingActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/title_bg"
        android:tag="skin:title_bg:background">

        <ImageButton
            android:id="@+id/toolbar_back"
            style="@style/toolbar_back_icon" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ellipsize="middle"
            android:maxLength="20"
            android:maxLines="1"
            android:tag="skin:title_text:textColor"
            android:text="@string/menu_setting"
            android:textColor="@color/title_text"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/setting_clear_img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="skin:title_text:textColor"
            android:text="@string/clear_cache_img"
            android:textColor="@color/title_text"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider"
        android:tag="skin:divider:background" />

    <LinearLayout
        android:id="@+id/setting_clear_net"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="skin:title_text:textColor"
            android:text="@string/clear_cache_net"
            android:textColor="@color/title_text"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>
