<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_register_main_bg">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        >

        <ImageButton
            android:id="@+id/toolbar_back"
            style="@style/toolbar_back_icon" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ellipsize="middle"
            android:maxLength="20"
            android:maxLines="1"
            android:tag="skin:title_text:textColor"
            android:textColor="@color/title_text"
            android:textSize="14sp" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--登陆layout-->
            <TableLayout
                android:id="@+id/login_register_login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:visibility="gone">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_account_email"
                        android:textColor="@color/login_register_text"
                        android:textSize="@dimen/login_register_text" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/login_email_et"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/login_register_text"
                        android:textSize="@dimen/login_register_text" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_password"
                        android:textColor="@color/login_register_text"
                        android:textSize="@dimen/login_register_text" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/login_pwd_et"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="textPassword"
                        android:textColor="@color/login_register_text"
                        android:textSize="@dimen/login_register_text" />

                </TableRow>

            </TableLayout>

            <!--注册layout-->

            <TableLayout
                android:id="@+id/login_register_register_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="50dp"
                android:paddingRight="50dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_email"
                        android:textColor="@color/login_register_text"
                        android:textSize="@dimen/login_register_text" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_email_et"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/login_register_text"
                        android:textSize="@dimen/login_register_text" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_account"
                        android:textColor="@color/login_register_text"
                        android:textSize="@dimen/login_register_text" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_account_et"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLength="10"
                        android:hint="@string/max_ten"
                        android:textColor="@color/login_register_text"
                        android:textSize="@dimen/login_register_text" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_password"
                        android:textColor="@color/login_register_text"
                        android:textSize="@dimen/login_register_text" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_pwd_et"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="textPassword"
                        android:textColor="@color/login_register_text"
                        android:textSize="@dimen/login_register_text"
                        android:hint="@string/less_six" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_confirm_password"
                        android:textColor="@color/login_register_text"
                        android:textSize="@dimen/login_register_text" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_confirm_pwd_et"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="textPassword"
                        android:textColor="@color/login_register_text"
                        android:textSize="@dimen/login_register_text"
                          />
                </TableRow>


            </TableLayout>

        </FrameLayout>

    </ScrollView>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical|left"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirdpart_plantform"
            android:textColor="@color/login_register_text"
            android:textSize="@dimen/login_register_text" />

        <ImageButton
            android:id="@+id/login_register_qq_authorize"
            android:layout_width="@dimen/third_part_lr_icon"
            android:layout_height="@dimen/third_part_lr_icon"
            android:padding="5dp"
            android:background="@drawable/umeng_socialize_qq" />

        <ImageButton
            android:id="@+id/login_register_weibo_authorize"
            android:layout_width="@dimen/third_part_lr_icon"
            android:layout_height="@dimen/third_part_lr_icon"
            android:padding="5dp"
            android:background="@drawable/umeng_socialize_sina" />

    </LinearLayout>

    <Button
        android:id="@+id/form_finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scroll"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/menu_self_button_bg"
        android:text="@string/form_finish"
        android:textColor="@color/login_register_text"
        android:textSize="@dimen/login_register_text" />

</RelativeLayout>
